# erolabs-spine-viewer

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  spinePlayerLoader.js  styles.css  useSettings.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ControlsPanel.jsx  SettingsPanel.jsx  Sidebar.jsx  SpineCanvas.jsx
